# benchmark-hawk

./: .gitignore  CMakeLists.txt  README.md
include/: configuracion.h  exportador.h  hawk.h  mldsa_oqs.h  sphincs_oqs.h  utils.h  utils_random.h
jupyter-hawk/: py-hawk.ipynb.ipynb
prev-results/: analisis.ipynb
prev-results/1024/: 1_1024.csv  1_512.csv  2_1024.csv  2_512.csv
prev-results/32/: 1_1024.csv  1_512.csv  2_1024.csv  2_512.csv
src/: exportador.c  hawk.c  main.c  mldsa_oqs.c  sphincs_oqs.c  utils.c  utils_random.c
src/hawk_ref_tests/: speed.c
